@@ -120,7 +120,9 @@ comes with this distribution for details.
 - Dist::Zilla::Plugin::JavaScript::Minifier
 - Dist::Zilla::Plugin::Libarchive
 - Dist::Zilla::Plugin::MathInt64
+- Dist::Zilla::Plugin::Meta::Dynamic::Config
 - Dist::Zilla::Plugin::OurPkgVersion
+- Dist::Zilla::Plugin::PPPort
 - Dist::Zilla::Plugin::Test::Version
 - Dist::Zilla::Plugin::TextTabs
 - Dist::Zilla::PluginBundle::Author::Plicease
@@ -162,6 +164,7 @@ comes with this distribution for details.
 - Module::Which
 - Mojolicious::Plugin::Ident
 - Mojolicious::Plugin::TtRenderer
+- MooseX::Types::JSON
 - NewFangle
 - Package::Checkpoint
 - PeekPoke::FFI
