@@ -153,14 +153,15 @@ File::Listing::Ftpcopy                         = 0.09
 File::ReadBackwards                            = 1.06
 File::ShareDir::Dist                           = 0.07
 File::Which                                    = 1.27
-File::XDG                                      = 0.08
+File::XDG                                      = 0.11
 Kafka::Librd                                   = 0.20
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.04
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.62
+MooseX::Types::JSON                            = 1.01
 NewFangle                                      = 0.07
-Return::MultiLevel                             = 0.06
+Return::MultiLevel                             = 0.08
 Package::Checkpoint                            = 0.01
 PeekPoke::FFI                                  = 0.02
 Perl::Critic::Plicease                         = 0.04
@@ -221,6 +222,21 @@ Test::Pod::Spelling::CommonMistakes            = 0
 Test::Spelling                                 = 0
 
 YAML                                           = 0
+
+; FFI-Platypus build:
+Dist::Zilla::Plugin::PPPort                    = 0
+
+; Alien-Editline
+; Alien-Hunspell
+; Alien-bison
+; AnyEvent-WebSocket-Client
+; Dist-Zilla-PluginBundle-Author-Plicease
+; FFI-Platypus
+; FFI-TinyCC
+; Shell-Guess
+; String-Template
+; Task-BeLike-Plicease
+Dist::Zilla::Plugin::Meta::Dynamic::Config     = 0
 
 [Author::Plicease::Upload]
 cpan = 0
