@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Added Dist::Zilla::Plugin::Meta::Dynamic::Config
+  - Added Dist::Zilla::Plugin::PPPort
+  - Added MooseX::Types::JSON
   - Updated my dists to latest
 
 2.29      2021-11-15 07:56:13 -0700
